# codebase-digest-ai

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
codebase_digest/: __init__.py  models.py
codebase_digest/analyzer/: __init__.py  codebase_analyzer.py  flow_analyzer.py  metrics_analyzer.py
codebase_digest/cli/: __init__.py  main.py
codebase_digest/exporters/: __init__.py  graph_exporter.py  html_exporter.py  json_exporter.py  markdown_exporter.py  readme_exporter.py
codebase_digest/parser/: __init__.py  base.py  javascript_parser.py  python_parser.py
